# tutorials

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  RAG-OLMo-Demo.ipynb  RAG-OLMo-FAISS.ipynb  RAG-OLMo-Qdrant.ipynb  README.md  _config.yml  _toc.yml  intro.md  jupyter-panel-proxy.yml  requirements.txt
.devcontainer/Scipy2024/: Dockerfile  devcontainer.json  environment.yml  postBuild.sh
AI_For_Scientific_Discovery_Participatory_Design_Workshop/: README.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session-outline/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session1/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session2/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session3/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session4/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session5/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/session6/: index.md
AI_For_Scientific_Discovery_Participatory_Design_Workshop/timers/: timer-10-minutes.md  timer-15-minutes.md  timer-20-minutes.md  timer-25-minutes.md  timer-5-minutes.md
AI_Postdoc_Workshop/: README.md  break1.md
ISS_AI4SciD_Workshop/: README.md  pixi.toml
SciPy2024/: Astro Physics Dataset Creation.ipynb  README.md  SciPyTutorialDescription.md  break1.md  break2.md  environment.yaml
demos/olmo-rag/: .gitignore  (+2 more)
resources/: .gitignore  README.md  download_data.py  download_hls4ml_data.sh  pyproject.toml
resources/src/ssec_tutorials/: __init__.py  setup.py
resources/src/ssec_tutorials/scipy_conf/: __init__.py  langchain.py  llama.py
(+53 files in other folders)
