[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssec-tutorials"
version = "2024.6.11"
description = "UW SSEC Tutorials Utility Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain>=0.2.3",
    "jsonlines>=4.0.0"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "*.pdf",
]
